--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^7.3.1",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
